- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5597] Rename tx_seminars_Model_Registration to Tx_Seminars_Model_Registration
- [#5596] Rename tx_seminars_Model_PaymentMethod to Tx_Seminars_Model_PaymentMethod
- [#5595] Rename tx_seminars_Model_Organizer to Tx_Seminars_Model_Organizer
- [#5629] Use MathUtility instead t3lib_utility_Math
- [#5594] Rename tx_seminars_Model_Lodging to Tx_Seminars_Model_Lodging
- [#5593] Rename tx_seminars_Model_FrontEndUser to Tx_Seminars_Model_FrontEndUser
- [#5592] Rename tx_seminars_Model_FrontEndUserGroup to Tx_Seminars_Model_FrontEndUserGroup
- [#5591] Rename tx_seminars_Model_Food to Tx_Seminars_Model_Food
- [#5589] Rename tx_seminars_Model_EventType to Tx_Seminars_Model_EventType
- [#5588] Rename tx_seminars_Model_Checkbox to Tx_Seminars_Model_Checkbox
- [#5587] Rename tx_seminars_Model_Category to Tx_Seminars_Model_Category
- [#5586] Rename tx_seminars_Model_BackEndUser to Tx_Seminars_Model_BackEndUser
- [#5585] Rename tx_seminars_Model_BackEndUserGroup to Tx_Seminars_Model_BackEndUserGroup
- [#5583] Rename tx_seminars_Mapper_TargetGroup to Tx_Seminars_Mapper_TargetGroup
- [#5582] Rename tx_seminars_Mapper_Speaker to Tx_Seminars_Mapper_Speaker
- [#5581] Rename tx_seminars_Mapper_Skill to Tx_Seminars_Mapper_Skill
- [#5579] Rename tx_seminars_Mapper_Place to Tx_Seminars_Mapper_Place
- [#5569] Rename tx_seminars_Mapper_FrontEndUserGroup to Tx_Seminars_Mapper_FrontEndUserGroup
- [#5568] Rename tx_seminars_Mapper_Food to Tx_Seminars_Mapper_Food
- [#5567] Rename tx_seminars_Mapper_Event to Tx_Seminars_Mapper_Event
- [#5566] Rename tx_seminars_Mapper_EventType to Tx_Seminars_Mapper_EventType