@@ -20,7 +20,7 @@
  *
  * @author Niels Pardon <mail@niels-pardon.de>
  */
-class tx_seminars_Model_Skill extends Tx_Oelib_Model implements Tx_Seminars_Interface_Titled {
+class Tx_Seminars_Model_Skill extends Tx_Oelib_Model implements Tx_Seminars_Interface_Titled {
 	/**
 	 * Returns our title.
 	 *
